# ivms-salt-extractor

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  buildspec.yml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yaml
docs/: flow.drawio
docs/developer-guide/: setup.md
infrastructure/cloudformation/: config-dev.json  config-prod.json  config-staging.json  generator.yaml  integration-tests.yaml  root.yaml
src/: api.rs  generator.rs  main.rs  model.rs  runtime_error.rs
tests/: main.rs
tests/features/: generate-token.feature
