##
# This file is part of the IVMS Online.
#
# @copyright 2023 - 2024 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "ivms-salt-extractor"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/ivms-online/ivms-salt-extractor"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]

[dependencies]
aws-config = "1.1.7"
aws-sdk-lambda = "1.15.1"
aws-smithy-runtime-api = "1.1.7"
aws-smithy-types = "1.1.8"
chrono = { version = "0.4.35", default-features = false, features = ["clock", "serde"] }
futures = "0.3.30"
hmac = "0.12.1"
jwt = "0.16.0"
lambda_runtime = "0.10.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
wrzasqpl-commons-aws = "3.4.6"

[dev-dependencies]
aws-sdk-lambda = "1.15.1"
cucumber = "0.20.2"
test-context = "0.3.0"

[[test]]
name = "integration"
path = "tests/main.rs"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
